[package]
name = "btcli"
version = "0.1.0"
edition = "2021"
authors = ["Lorenzo M. <maturanolorenzo@gmail.com>"]
description = "A silly CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rust-crypto = "0.2.36"
bs58 = "0.4.0"
secp256k1 = {version = "0.22.1", features=["rand-std", "bitcoin_hashes"]}
num = "0.4.0"
clap = { version = "3.2.12", features = ["derive"] }
